@@ -1,5 +1,6 @@
 package com.example.infinityweb_be.service.order;
 
+import com.example.infinityweb_be.common.NotFoundException;
 import com.example.infinityweb_be.domain.Order;
 import com.example.infinityweb_be.domain.OrderDetail;
 import com.example.infinityweb_be.domain.User;
@@ -11,8 +12,11 @@ import com.example.infinityweb_be.domain.dto.order.OrderStatus;
 import com.example.infinityweb_be.repository.CourseRepository;
 import com.example.infinityweb_be.repository.UserRepository;
 import com.example.infinityweb_be.repository.order.OrderRepository;
+
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.crossstore.ChangeSetPersister;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -20,6 +24,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +43,6 @@ public class OrderService {
         User user = userRepository.findById(req.getUserId())
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-
         Order order = Order.builder()
                 .course(course)
                 .user(user)
@@ -50,26 +54,16 @@ public class OrderService {
                 .totalAmount(course.getPrice())
                 .build();
 
-
-
-
         OrderDetail detail = OrderDetail.builder()
                 .order(order)
-                .serviceName("Unlock khóa học 1 năm")
-                .serviceDesc("Mở khóa tất cả nội dung trong 12 tháng")
-                .price(BigDecimal.valueOf(1000000))
+                .serviceName("Mua khóa học: " + course.getName())
+                .serviceDesc("Truy cập toàn bộ nội dung khóa học \"" + course.getName() + "\" trong 12 tháng.")
+                .price(course.getPrice())
                 .build();
 
         order.setOrderDetails(List.of(detail));
         Order saved = orderRepository.save(order);
-        return new OrderResponse(
-                saved.getOrderCode(),
-                saved.getStatus().name(),
-                saved.getTotalAmount(),
-                saved.getPaymentMethod().name(), // ✅ sửa tại đây
-                saved.getOrderDate(),
-                List.of(new OrderDetailDTO("Unlock khóa học 1 năm", "Mở khóa tất cả nội dung trong 12 tháng", BigDecimal.valueOf(1000000)))
-        );
+        return mapToResponse(saved);
 
     }
 
@@ -98,20 +92,27 @@ public class OrderService {
         Order order = orderRepository.findByOrderCode(orderCode)
                 .orElseThrow(() -> new RuntimeException("Order not found"));
 
+        return mapToResponse(order);
+    }
+
+
+    private OrderResponse mapToResponse(Order order) {
         List<OrderDetailDTO> details = order.getOrderDetails().stream()
                 .map(d -> new OrderDetailDTO(d.getServiceName(), d.getServiceDesc(), d.getPrice()))
-                .toList();
+                .collect(Collectors.toList());
 
         return new OrderResponse(
                 order.getOrderCode(),
                 order.getStatus().name(),
                 order.getTotalAmount(),
-                order.getPaymentMethod().name(), // ✅ sửa tại đây
+                order.getPaymentMethod().name(),
                 order.getOrderDate(),
-                details
+                order.getCourse().getName(),
+                details,
+                order.getUser().getUsername() // ← thêm
         );
-
     }
+
 
     public Optional<Order> findByOrderCode(String orderCode) {
         return orderRepository.findByOrderCode(orderCode);
@@ -128,32 +129,67 @@ public class OrderService {
 
 
     public List<OrderResponse> getOrdersByUserId(Integer userId) {
-        List<Order> orders = orderRepository.findAllByUserId(userId);
-        return orders.stream().map(this::mapToResponse).toList();
+        List<Order> orders = orderRepository.findByUserId(userId);
+        return orders.stream().map(this::mapToResponse).collect(Collectors.toList());
     }
+
+
+
+    public List<OrderResponse> getOrdersByUserIdAndStatus(Integer userId, String status) {
+        List<Order> orders;
+        if (status != null) {
+            orders = orderRepository.findByUserIdAndStatus(userId, OrderStatus.valueOf(status.toUpperCase()));
+        } else {
+            orders = orderRepository.findByUserId(userId);
+        }
+
+        return orders.stream().map(this::mapToResponse).collect(Collectors.toList());
+    }
+
+
 
     public List<OrderResponse> getAllOrders() {
         List<Order> orders = orderRepository.findAll(); // hoặc phân trang
         return orders.stream().map(this::mapToResponse).toList();
     }
 
-    private OrderResponse mapToResponse(Order order) {
-        List<OrderDetailDTO> details = order.getOrderDetails().stream()
-                .map(d -> new OrderDetailDTO(d.getServiceName(), d.getServiceDesc(), d.getPrice()))
-                .toList();
 
-        return new OrderResponse(
-                order.getOrderCode(),
-                order.getStatus().name(),
-                order.getTotalAmount(),
-                order.getPaymentMethod().name(),
-                order.getOrderDate(),
-                details
-        );
+
+
+    public void cancelOrder(String orderCode, Integer userId) {
+        Order order = orderRepository.findByOrderCode(orderCode)
+                .orElseThrow(() -> new NotFoundException("Không tìm thấy đơn"));
+
+        if (!order.getUser().getId().equals(userId)) {
+            throw new AccessDeniedException("Bạn không có quyền hủy đơn này");
+        }
+
+        if (order.getStatus() != OrderStatus.PENDING) {
+            throw new IllegalStateException("Chỉ có thể hủy đơn ở trạng thái PENDING");
+        }
+
+        order.setStatus(OrderStatus.CANCELLED);
+        orderRepository.save(order);
     }
 
 
+    public void approveOrder(String orderCode) {
+        Order order = orderRepository.findByOrderCode(orderCode)
+                .orElseThrow(() -> new NotFoundException("Không tìm thấy đơn"));
+
+        if (order.getStatus() != OrderStatus.PENDING) {
+            throw new IllegalStateException("Chỉ duyệt đơn ở trạng thái PENDING");
+        }
+
+        order.setStatus(OrderStatus.PAID);
+        orderRepository.save(order);
+    }
 
 
+    public void deleteOrderByCode(String orderCode) {
+        Order order = orderRepository.findByOrderCode(orderCode)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
+        orderRepository.delete(order);
+    }
 
 }
